--- a/cg.html
+++ b/cg.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Melodies in tales</title>
+  <title>categories</title>
   <link rel="stylesheet" href="./assets/css/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -12,13 +12,12 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="./assets/css/login_signUp.css">
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Melodies in Tales</a>
@@ -138,28 +137,20 @@
     </div>
   </nav>
 
-  <div class="heading">
-    <div class="container">
-      <div class="row">
-        <div class="col-5 ">
-
-          <div class="content">
-            <h2 class="heading-type">Chào mừng tới <br> thư viện sách nói</h2>
-            <h1 class="heading-type">Melodies in Tales</h1>
-            <button id="btnLink">Nghe sách ngay bây giờ</button>
-            <img id="audiobook2" src="./assets/image/listen.jpeg" alt="">
-          </div>
-
-        </div>
-        <div class="col-7 "><img id="audiobook" src="./assets/image/audiobook.png" alt=""></div>
+  <div class="container container-mid">
+    <div class="card" style="width: 18rem;">
+      <div class="ratio" style="--bs-aspect-ratio: 150%;">
+        <img src="https://photo-cms-sggp.zadn.vn/w570/Uploaded/2021/duwsxrdrky/2017_05_07/harry_1_biamoi_2017_small61141652pm_1_yhrp.jpg" class="card-img-top" alt="...">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
+    
+    
   </div>
-
-
-
-
-
 
 
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
